Bug 251897 - A test case in imported/w3c/web-platform-tests/shadow-dom/focus/click-focus-delegatesFocus-click.html fails
Summary: A test case in imported/w3c/web-platform-tests/shadow-dom/focus/click-focus-d...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: UI Events (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL: https://wpt.fyi/results/shadow-dom/fo...
Keywords: InRadar
Depends on:
Blocks: 148695
  Show dependency treegraph
 
Reported: 2023-02-07 17:26 PST by Ryosuke Niwa
Modified: 2023-02-07 22:44 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2023-02-07 17:26:22 PST
There is a failing test case in the following test:
LayoutTests/imported/w3c/web-platform-tests/shadow-dom/focus/click-focus-delegatesFocus-click.html
Comment 1 Ryosuke Niwa 2023-02-07 17:31:49 PST
Pull request: https://github.com/WebKit/WebKit/pull/9791
Comment 2 EWS 2023-02-07 19:41:03 PST
Committed 259990@main (f26fd78b87fa): <https://commits.webkit.org/259990@main>

Reviewed commits have been landed. Closing PR #9791 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-02-07 19:42:16 PST
<rdar://problem/105159802>