A test case in imported/w3c/web-platform-tests/shadow-dom/focus/click-focus-delegatesFocus-click.html fails https://bugs.webkit.org/show_bug.cgi?id=251897

Reviewed by Tim Nguyen.

The bug was caused by EventHandler::dispatchMouseEvent traversing over the composed tree.
This part of the spec has been re-written to use focus delegate so reuse findFocusDelegateInternal in Element.cpp,
which has been now renamed to findFocusDelegateForTarget, to find the focus delegate.

* LayoutTests/imported/w3c/web-platform-tests/shadow-dom/focus/click-focus-delegatesFocus-click-expected.txt:
* Source/WebCore/dom/Element.cpp:
(WebCore::autoFocusDelegate):
(WebCore::Element::findFocusDelegateForTarget): Renamed from findFocusDelegateInternal.
(WebCore::Element::findFocusDelegate):
(WebCore::Element::focus):
* Source/WebCore/dom/Element.h:
* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::dispatchMouseEvent):
(WebCore::findFirstMouseFocusableElementInComposedTree): Deleted.

Canonical link: https://commits.webkit.org/259990@main